# polybot

./: .env_example  .gitignore  .pre-commit-config.yaml  CHANGE_log.md  README.md  assessment1.md  improvement-plan.md  main.py  markets.json.example  operator-web-ui.md  pyproject.toml  requirements.txt  verify_setup.py
.github/workflows/: ci.yml
.kilo/plans/: 1775238289217-playful-circuit.md
core/: __init__.py  auth.py  client.py  data.py  database.py  logger.py  negrisk.py  orderbook.py  retry.py  ws.py
engine/: __init__.py  backtester.py  circuit_breaker.py  execution.py  fill_reconciler.py  order_executor.py  risk.py  telemetry_collector.py
memory-bank/: activeContext.md  externalDocs.md  interactionHistory.md  productContext.md  progress.md  projectIntelligence.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/archives/: README.md  assessment-2026-03-30.md  improvement-plan-2026-03-30.md
memory-bank/featureSpecs/: README.md
scripts/: repair_legacy_ledger.py
strategies/: __init__.py  ai_arb.py  amm.py  base.py  copy_trading.py  logical_arb.py  momentum.py
tests/: __init__.py  conftest.py  test_client.py  test_execution_reconciliation.py  test_fill_reconciler.py  test_legacy_ledger_repair.py  test_negrisk.py  test_operator_controller.py  test_operator_server.py  test_order_executor.py  test_phase3_order_management.py  test_phase4_operational_stability.py  test_risk_pnl_plumbing.py  test_strategy_ai_arb.py  test_strategy_copy_trading.py  test_strategy_momentum.py  test_telemetry_collector.py
tests/mocks/: __init__.py  execution.py
ui/: __init__.py  dashboard.py  direct_view.html  operator_controller.py  operator_page.py  operator_server.py
